[gd_scene load_steps=9 format=3 uid="uid://cllfxcqmt34or"]

[ext_resource type="Script" uid="uid://bhx4rsfw8oige" path="res://scenes/enemy.gd" id="1_7p1mj"]
[ext_resource type="PackedScene" uid="uid://chvdgrpmd6178" path="res://scenes/components/hitbox.tscn" id="2_4ra3w"]
[ext_resource type="PackedScene" uid="uid://cdkvkbstvh6ef" path="res://scenes/components/LifeComponent.tscn" id="2_c4w8v"]
[ext_resource type="Texture2D" uid="uid://cgex30mswcu0q" path="res://icon.svg" id="2_md0e3"]
[ext_resource type="PackedScene" uid="uid://bk2oqqxxglu2n" path="res://scenes/components/hurtbox.tscn" id="3_xwavj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ra3w"]
size = Vector2(116, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwavj"]
size = Vector2(144, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4w8v"]
size = Vector2(118, 118)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_7p1mj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4ra3w")

[node name="LifeComponent" parent="." instance=ExtResource("2_c4w8v")]
damage_cooldown = 0.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("2_md0e3")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("life_component") instance=ExtResource("3_xwavj")]
life_component = NodePath("../LifeComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_xwavj")
debug_color = Color(0.749436, 0.460069, 1.92523e-07, 0.42)

[node name="Hitbox" parent="." instance=ExtResource("2_4ra3w")]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_c4w8v")
debug_color = Color(0.995151, 0, 0.210211, 0.42)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LifeBar" type="ProgressBar" parent="HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -75.0
offset_top = -87.0
offset_right = 116.0
offset_bottom = -60.0
show_percentage = false

[node name="LifeLabel" type="Label" parent="HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -61.0
offset_top = -86.0
offset_right = 103.0
offset_bottom = -63.0
horizontal_alignment = 1
